[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
shell-words = "1.1"                              # shell-style tokeniser
dirs = "4"                                       # for x-platform home_dir
